animaciones y paleta de colores nueva

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito:wght@300&family=Smooch+Sans:wght@300&family=Syne+Mono&family=Yanone+Kaffeesatz:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/Luna.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
